@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
entity fr_user {
     id : UUID <<PK>>
     --
     preferred_username : VARCHAR(255)
     email : VARCHAR(255)
     given_name : VARCHAR(255)   |  N
     family_name : VARCHAR(255)  |  N
}
entity fr_teacher {
    id : UUID <<PK>>
    --
}
entity fr_exam {
    id : UUID <<PK>>
    --
    teacher_id : UUID <<FK>>
    title : VARCHAR(255)
    end_time : TIMESTAMP(6)
    start_time : TIMESTAMP(6)
    started_at : TIMESTAMP(6) |  N
    ended_at : TIMESTAMP(6)   |  N
    pin : NUMERIC
}
entity fr_student {
    id : UUID <<PK>>
    --
}
entity fr_notice {
    id : UUID <<PK>>
    --
    type       : fr_notice_type
    content    : VARCHAR(1024)
    start_time : DATE  |  N
    end_time   : DATE  |  N
}
fr_teacher ||--o{ fr_exam
fr_student -|> fr_user
fr_teacher --|> fr_user
@enduml